--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,60 @@
     <title>Acceso denegado</title>
 </head>
 <body>
-    <h1>Acceso Denegado</h1>
+    <h1>Google Sing In</h1>
+
+    <div id="g_id_onload"
+        data-client_id="348246975279-mfuitamcl5a2sjn0i0srol07br6nbcb7.apps.googleusercontent.com"
+        data-auto_prompt="false"
+        data-callback="handleCredentialResponse">
+    </div>
+    <div class="g_id_signin"
+        data-type="standard"
+        data-size="large"
+        data-theme="outline"
+        data-text="sign_in_with"
+        data-shape="rectangular"
+        data-logo_alignment="left">
+    </div>
+
+    <button id="google_signout">
+        Signout
+    </button>
+
+    <script src="https://accounts.google.com/gsi/client" async></script>
+    <script>
+        function handleCredentialResponse(response) {
+            // Google Token : ID_TOKEN
+            //console.log('id_token', response.credential)
+            const body = { id_token: response.credential}
+            fetch('http://localhost:8080/api/auth/google', {
+                method: "POST",
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify(body)
+            })
+            .then(r => r.json())
+            .then(resp =>{
+                console.log(resp)
+                localStorage.setItem('email', resp.user.email)
+            }).catch(console.error)
+
+        }
+
+        const button = document.getElementById("google_signout");
+        button.onclick = function(){
+            console.log(google.accounts.id)
+            google.accounts.id.disableAutoSelect()
+
+
+            google.accounts.id.revoke(localStorage.getItem('email'), done=>{
+                localStorage.clear()
+                location.reload()
+            })
+        }
+      </script>
+      
+
 </body>
 </html>
